image and header

--- a/src/template.html
+++ b/src/template.html
@@ -3,14 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Julian's Restaurant</title>
+    <title>Julczaniato</title>
   </head>
   <body>
     <header>
+      <div id="heading">Julczaniato</div>
       <nav>
         <button>Home</button> <button>Menu</button> <button>About</button>
       </nav>
     </header>
-    <div id="content"></div>
+    <div id="content">
+      <img src="background.jpg" alt="background-image" />
+    </div>
   </body>
 </html>
