--- a/src/template.html
+++ b/src/template.html
@@ -13,7 +13,9 @@
       </nav>
     </header>
     <div id="content">
-      <img src="background.jpg" alt="background-image" />
+      <div class="text">Best Italian food in Crakow</div>
+      <img src="cook.jpg" alt="man cooking" />
+      <div class="text">Order Online!</div>
     </div>
   </body>
 </html>
