--- a/src/template.html
+++ b/src/template.html
@@ -12,10 +12,6 @@
         <button>Home</button> <button>Menu</button> <button>About</button>
       </nav>
     </header>
-    <div id="content">
-      <div class="text">Best Italian food in Crakow</div>
-      <img src="cook.jpg" alt="man cooking" />
-      <div class="text">Order Online!</div>
-    </div>
+    <div id="content"></div>
   </body>
 </html>
