--- a/src/template.html
+++ b/src/template.html
@@ -9,7 +9,7 @@
     <header>
       <div id="heading">Julczaniato</div>
       <nav>
-        <button>Home</button> <button>Menu</button> <button>About</button>
+        <button>Home</button> <button>Menu</button> <button>Contact</button>
       </nav>
     </header>
     <div id="content"></div>
