--- a/src/template.html
+++ b/src/template.html
@@ -9,7 +9,8 @@
     <header>
       <div id="heading">Julczaniato</div>
       <nav>
-        <button>Home</button> <button>Menu</button> <button>Contact</button>
+        <button id="home">Home</button> <button id="menu">Menu</button>
+        <button id="contact">Contact</button>
       </nav>
     </header>
     <div id="content"></div>
